--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -28,13 +28,13 @@ msgstr "et"
 
 #: app/templates/app/join.django:6 app/templates/app/join_row.django:10
 #: app/templates/app/join_row.django:11
-msgid "join.gameName.title"
-msgstr "Nom de la partie"
+msgid "join.lobbyName.title"
+msgstr "Nom du lobby"
 
 #: app/templates/app/join.django:7 app/templates/app/join_row.django:22
 #: app/templates/app/join_row.django:29
 msgid "join.type.title"
-msgstr "Type de partie"
+msgstr "Mode de jeu"
 
 #: app/templates/app/join.django:8
 msgid "join.players.title"
