--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -26,71 +26,71 @@ msgstr "matsi alkaa %(seconds)s.."
 #: app/templates/app/join.django:7 app/templates/app/join_row.django:10
 #: app/templates/app/join_row.django:11
 msgid "join.lobbyName.title"
-msgstr ""
+msgstr "Palvelimen nimi"
 
 #: app/templates/app/join.django:8 app/templates/app/join_row.django:22
 #: app/templates/app/join_row.django:30
 msgid "join.type.title"
-msgstr ""
+msgstr "Pelityyppi"
 
 #: app/templates/app/join.django:9
 msgid "join.players.title"
-msgstr ""
+msgstr "Pelaajat"
 
 #: app/templates/app/join.django:10 app/templates/app/join.django:11
 #: app/templates/app/join_row.django:69 app/templates/app/join_row.django:70
 #: app/templates/app/join_row.django:77 app/templates/app/join_row.django:78
 msgid "join.playerName.title"
-msgstr ""
+msgstr "Pelaajan nimi"
 
 #: app/templates/app/join.django:12
 msgid "join.action.title"
-msgstr ""
+msgstr "Toiminto"
 
 #: app/templates/app/join.django:40
 msgid "language.go"
-msgstr ""
+msgstr "Aseta"
 
 #: app/templates/app/join_row.django:31
 msgid "join.type.types.tournament1v1"
-msgstr ""
+msgstr "Turnaus 1v1"
 
 #: app/templates/app/join_row.django:32
 msgid "join.type.types.tournament1v1v1v1"
-msgstr ""
+msgstr "Turnaus 1v1v1v1"
 
 #: app/templates/app/join_row.django:33
 msgid "join.type.types.game1v1"
-msgstr ""
+msgstr "Peli 1v1"
 
 #: app/templates/app/join_row.django:34
 msgid "join.type.types.game1vAI"
-msgstr ""
+msgstr "Peli 1vAI"
 
 #: app/templates/app/join_row.django:35
 msgid "join.type.types.game1v1v1v1"
-msgstr ""
+msgstr "Peli 1v1v1v1"
 
 #: app/templates/app/join_row.django:36
 msgid "join.type.types.game1v1vAIvAI"
-msgstr ""
+msgstr "Peli 1v1vAIvAI"
 
 #: app/templates/app/join_row.django:48
 msgid "join.players.connected_players"
-msgstr ""
+msgstr "Liittyneet pelaajat"
 
 #: app/templates/app/join_row.django:56
 msgid "join.players.player_slots"
-msgstr ""
+msgstr "Pelaajien määrä"
 
 #: app/templates/app/join_row.django:89
 msgid "join.action.full"
-msgstr ""
+msgstr "Täynnä"
 
 #: app/templates/app/join_row.django:91
 msgid "join.action.join"
-msgstr ""
+msgstr "Liity"
 
 #: app/templates/app/join_row.django:93
 msgid "join.action.create"
-msgstr ""
+msgstr "Luo"
