feat(translations): add translating balls missed

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-14 08:50+0000\n"
+"POT-Creation-Date: 2024-05-15 07:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,6 +22,23 @@ msgstr ""
 #, fuzzy, python-format
 msgid "match in %(seconds)s.."
 msgstr "match in %(seconds)s.."
+
+#: app/game/game.py:272
+#, python-format
+msgid "balls missed %(score)s/3"
+msgstr "balls missed %(score)s/3"
+
+#: app/templates/app/game.django:4
+msgid "game.info.waiting"
+msgstr "waiting for players.."
+
+#: app/templates/app/game.django:24
+msgid "game.info.press"
+msgstr "press"
+
+#: app/templates/app/game.django:24
+msgid "game.info.to_exit"
+msgstr "to exit"
 
 #: app/templates/app/join.django:7 app/templates/app/join_row.django:10
 #: app/templates/app/join_row.django:11
