--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -21,7 +21,7 @@ msgstr ""
 #: app/consumers.py:166
 #, python-format
 msgid "%(player)s won the tournament wowieee!!"
-msgstr "%(player)s voitti turnauksen vautsivauu!!"
+msgstr "%(player)s voitti turnauksen vautsivau!!"
 
 #: app/consumers.py:186
 msgid "next match"
@@ -35,7 +35,7 @@ msgstr "matsi alkaa %(seconds)s.."
 #: app/game/game.py:118
 #, python-format
 msgid "%(player)s won the match woo!"
-msgstr "%(player)s voitti matsin vautsii!"
+msgstr "%(player)s voitti matsin vautsi!"
 
 #: app/game/game.py:276
 msgid "eliminated"
