--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -132,56 +132,56 @@ msgstr "Créer"
 
 #: app/views.py:68
 msgid "views.fields.empty"
-msgstr ""
+msgstr "Tous les champs n'ont pas été spécifiés"
 
 #: app/views.py:71
 msgid "input.group_name.incorrect_characters"
-msgstr ""
+msgstr "Le nom du lobby ne peut dépasser les 100 caractères, ils doivent être des caractères ASCII, des tirets (du 6 ou 8), ou des des points"
 
 #: app/views.py:75 app/views.py:79
 msgid "input.player_name.length"
-msgstr ""
+msgstr "Le nom du/de la joueur.se doit être entre 1 et 12 caractères"
 
 #: app/views.py:82
 msgid "input.player_name.same"
-msgstr ""
+msgstr "Les noms des joueur.ses ne peuvent pas être les mêmes"
 
 #: app/views.py:98
 msgid "input.game1v1.count"
-msgstr ""
+msgstr "Le nombre de joueur.ses doit être de 2 pour ce mode de jeu."
 
 #: app/views.py:106
 msgid "input.game1v1v1v1.count"
-msgstr ""
+msgstr "Le nombre de joueur.ses doit être de 4 pour ce mode de jeu."
 
 #: app/views.py:111
 msgid "input.tournament1v1.count"
-msgstr ""
+msgstr "Le nombre de joueur.ses doit être une puissance de 2 pour ce mode de jeu."
 
 #: app/views.py:117
 msgid "input.tournament1v1v1v1.count"
-msgstr ""
+msgstr "Le nombre de joueur.ses doit être une puissance de 4 pour ce mode de jeu."
 
 #: app/views.py:119
 msgid "input.game_mode.invalid"
-msgstr ""
+msgstr "Mode de jeu invalide"
 
 #: app/views.py:128
 msgid "input.lobby.nonexistent"
-msgstr ""
+msgstr "Le lobby n'existe plus"
 
 #: app/views.py:152
 msgid "input.lobby.full"
-msgstr ""
+msgstr "Le lobby est plein"
 
 #: app/views.py:155
 msgid "input.lobby.one_spot"
-msgstr ""
+msgstr "Seulement une place est disponible"
 
 #: app/views.py:158
 msgid "input.player_name.one_taken"
-msgstr ""
+msgstr "Le nom du/de la joueur.se 1 est déjà prit"
 
 #: app/views.py:163
 msgid "input.player_name.two_taken"
-msgstr ""
+msgstr "Le nom du/de la joueur.se 2 est déjà prit"
