--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-15 07:39+0000\n"
+"POT-Creation-Date: 2024-05-25 14:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,30 +18,30 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: app/consumers.py:166
+#: app/consumers.py:185
 #, python-format
 msgid "%(player)s won the tournament wowieee!!"
 msgstr "%(player)s a gagné le tournoi oh là là!!"
 
-#: app/consumers.py:186
+#: app/consumers.py:205
 msgid "next match"
 msgstr "prochain match"
 
-#: app/consumers.py:196
+#: app/consumers.py:221
 #, python-format
 msgid "match in %(seconds)s.."
 msgstr "match dans %(seconds)s.."
 
-#: app/game/game.py:118
+#: app/game/game.py:142
 #, python-format
 msgid "%(player)s won the match woo!"
 msgstr "%(player)s a gagné le match waouh!"
 
-#: app/game/game.py:276
+#: app/game/game.py:300
 msgid "eliminated"
 msgstr "éliminé"
 
-#: app/game/game.py:277
+#: app/game/game.py:301
 #, python-format
 msgid "balls missed %(score)s/3"
 msgstr "balles perdues %(score)s/3"
@@ -129,3 +129,59 @@ msgstr "Rejoindre"
 #: app/templates/app/join_row.django:93
 msgid "join.action.create"
 msgstr "Créer"
+
+#: app/views.py:68
+msgid "views.fields.empty"
+msgstr "Tous les champs n'ont pas été spécifiés"
+
+#: app/views.py:71
+msgid "input.group_name.incorrect_characters"
+msgstr "Le nom du lobby ne peut dépasser les 100 caractères, ils doivent être des caractères ASCII, des tirets (du 6 ou 8), ou des des points"
+
+#: app/views.py:75 app/views.py:79
+msgid "input.player_name.length"
+msgstr "Le nom du/de la joueur.se doit être entre 1 et 12 caractères"
+
+#: app/views.py:82
+msgid "input.player_name.same"
+msgstr "Les noms des joueur.ses ne peuvent pas être les mêmes"
+
+#: app/views.py:98
+msgid "input.game1v1.count"
+msgstr "Le nombre de joueur.ses doit être de 2 pour ce mode de jeu."
+
+#: app/views.py:106
+msgid "input.game1v1v1v1.count"
+msgstr "Le nombre de joueur.ses doit être de 4 pour ce mode de jeu."
+
+#: app/views.py:111
+msgid "input.tournament1v1.count"
+msgstr "Le nombre de joueur.ses doit être une puissance de 2 pour ce mode de jeu."
+
+#: app/views.py:117
+msgid "input.tournament1v1v1v1.count"
+msgstr "Le nombre de joueur.ses doit être une puissance de 4 pour ce mode de jeu."
+
+#: app/views.py:119
+msgid "input.game_mode.invalid"
+msgstr "Mode de jeu invalide"
+
+#: app/views.py:128
+msgid "input.lobby.nonexistent"
+msgstr "Le lobby n'existe plus"
+
+#: app/views.py:152
+msgid "input.lobby.full"
+msgstr "Le lobby est plein"
+
+#: app/views.py:155
+msgid "input.lobby.one_spot"
+msgstr "Seulement une place est disponible"
+
+#: app/views.py:158
+msgid "input.player_name.one_taken"
+msgstr "Le nom du/de la joueur.se 1 est déjà prit"
+
+#: app/views.py:163
+msgid "input.player_name.two_taken"
+msgstr "Le nom du/de la joueur.se 2 est déjà prit"
